<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categori"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_categori" />
        <item
            android:id="@+id/nav_atividade"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_atividade" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_sobre" />
        </menu>
    </item>

</menu>
